--- a/example_dependency_injection/example_dependency_injection.info.yml
+++ b/example_dependency_injection/example_dependency_injection.info.yml
@@ -1,4 +1,4 @@
 name: Example Dependency Injection
 description: Example Dependency Injection
 type: module
-core: 8.x
+core_version_requirement: ^9
